# Digital-Forensics

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: demo.sh
src/digital_forensics/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
src/digital_forensics/api/: app.py
src/digital_forensics/services/: __init__.py  captioning.py  image_pipeline.py
src/digital_forensics/ui/: index.html
tests/: conftest.py  test_api.py  test_smoke.py
